slof_develop: draft version
Signed-off-by: Yongxue Hong <yhong@redhat.com>

--- a/qemu/tests/cfg/slof_boot.cfg
+++ b/qemu/tests/cfg/slof_boot.cfg
@@ -1,13 +1,68 @@
 - slof_boot: install setup image_copy unattended_install.cdrom
-    type = boot
+    virt_test_type = qemu libvirt
+    type = slof_boot
     restart_vm = yes
     kill_vm_on_error = yes
     login_timeout = 240
-    only ppc64 ppc64le
+    start_vm = yes
     variants:
-        - with_sec_size_4096_512:
-            physical_block_size = 4096
-            logical_block_size = 512
-        - with_sec_size_512_512:
-            physical_block_size = 512
-            logical_block_size = 512
+        - from_virtio_blk:
+            boot_device_type = virtio_blk
+            drive_format_image1 = virtio
+            # Set the address of virtio-blk-pci.
+            drive_pci_addr_image1 = 10
+            variants:
+                - @default:
+                - behind_pci_bridge:
+                    pci_controllers +=" pci_bridge1"
+                    type_pci_bridge1 = pci-bridge
+                    pci_bus_image1 = pci_bridge1
+                    # Set the address of pci_bridge1.
+                    addr_pci_bridge1 = 0xa
+                - with_dataplane:
+                    iothreads = iothread0
+                    blk_extra_params_image1 = "iothread=${iothreads}"
+                    drive_pci_addr_image1 = 12
+                - with_sector_size:
+                    drive_pci_addr_image1 = 13
+                    logical_block_size_image1 = 512
+                    physical_block_size_image1 = 4096
+        - from_virtio_scsi:
+            boot_device_type = virtio_scsi
+            drive_format_image1 = scsi-hd
+            # Set the address of virtio-scsi-pci.
+            virtio_scsi_pci_addr =  0x0b
+            bus_extra_params_image1 = 'addr=${virtio_scsi_pci_addr}'
+            variants:
+                - @default:
+                - behind_pci_bridge:
+                    pci_controllers +=" pci_bridge1"
+                    type_pci_bridge1 = pci-bridge
+                    pci_bus_image1 = pci_bridge1
+                    addr_pci_bridge1 = 0x5
+                - with_dataplane:
+                    virtio_scsi_pci_addr =  0x0c
+                    bus_extra_params_image1 = 'addr=${virtio_scsi_pci_addr}'
+                    iothreads = iothread0
+                    bus_extra_params_image1 += ",iothread=${iothreads}"
+                - with_sector_size:
+                    virtio_scsi_pci_addr =  0x0d
+                    bus_extra_params_image1 = 'addr=${virtio_scsi_pci_addr}'
+                    logical_block_size_image1 = 512
+                    physical_block_size_image1 = 512
+        - from_spapr_vscsi:
+            boot_device_type = spapr_vscsi
+            drive_format_image1 = scsi-hd
+            scsi_hba_image1 = spapr-vscsi
+            # Set the address of spapr-vscsi reg.
+            spapr_vscsi_reg =  0x1af
+            bus_extra_params_image1 = 'reg=${spapr_vscsi_reg}'
+        - from_usb_storage:
+            boot_device_type = usb_storage
+            drive_format_image1 = usb3
+            # Set the port of usb device.
+            drive_scsiid_image1 = 4
+            # Set the address of usb controller.
+            pci_addr_usb1 = 0xc
+
+
