unattended_install: Fix bug "No free matching bus"
Failed to inser device since patch.
https://github.com/avocado-framework/avocado-vt/pull/1558/files

Signed-off-by: Yongxue Hong <yhong@redhat.com>

--- a/generic/tests/cfg/unattended_install.cfg
+++ b/generic/tests/cfg/unattended_install.cfg
@@ -10,6 +10,7 @@
     shutdown_cleanly_timeout = 120
     force_create_image = yes
     guest_port_unattended_install = 12323
+    pcie_extra_root_port = 0
     kernel = vmlinuz
     initrd = initrd.img
     # Throw errors if guest screen is inactive
