multi_disk: Fix bug "No free matching bus"
Failed to insert device since patch
https://github.com/avocado-framework/avocado-vt/pull/1558/files

Signed-off-by: Yongxue Hong <yhong@redhat.com>

--- a/qemu/tests/cfg/multi_disk.cfg
+++ b/qemu/tests/cfg/multi_disk.cfg
@@ -7,6 +7,7 @@
     cmd_timeout = 1000
     black_list = C:
     vt_ulimit_nofile = 8192
+    pcie_extra_root_port = 0
     labeltype = mbr
     Linux:
         labeltype = gpt
